# Hole 7 (Par 5, Hdcp 11)
# Scores: brad=5, scott=5, tim=4, eric=5(+1)
# Junk: prox:scott

appId: golf.spicy
platform:
  ios:
    snapshotKeyHonorModalViews: false
---

- assertVisible:
    id: "hole-number"
    text: "7"

- tapOn:
    id: "player-brad-score"

- waitForAnimationToEnd:
    timeout: 500

- tapOn:
    id: "player-scott-score"

- waitForAnimationToEnd:
    timeout: 500

- tapOn:
    id: "player-tim-decrement"

- waitForAnimationToEnd:
    timeout: 500

- tapOn:
    id: "player-eric-decrement"

- waitForAnimationToEnd:
    timeout: 500

- tapOn:
    id: "junk-prox-scott"

- waitForAnimationToEnd:
    timeout: 300

- assertVisible:
    id: "team-1-hole-points"
    text: "0"

- assertVisible:
    id: "team-2-hole-points"
    text: "4"

- assertVisible:
    id: "team-1-points"
    text: "+15"

- assertVisible:
    id: "team-2-points"
    text: "-15"

- assertVisible:
    id: "junk-low_ball-2"

- assertVisible:
    id: "junk-low_ball-2-points"
    text: "2"

- assertVisible:
    id: "junk-low_total-2"

- assertVisible:
    id: "junk-low_total-2-points"
    text: "2"

- assertVisible:
    id: "junk-birdie-tim"

- takeScreenshot: "hole_7_complete"

- tapOn:
    id: "hole-nav-next"

- waitForAnimationToEnd:
    timeout: 1000
